--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -4,9 +4,12 @@
 @import "neat";
 @import "icons/material-design-iconic-font";
 
+@import "mixins/touch";
+
 @import "layout";
 @import "app_bar";
 @import "navigation";
+@import "lists";
 
 html, body {
   margin: 0;
