--- a/app/assets/stylesheets/base/_variables.scss
+++ b/app/assets/stylesheets/base/_variables.scss
@@ -81,3 +81,6 @@ $app-bar-color: white;
 // Navigation
 $side-navigation-max-width: 25rem;
 $side-navigation-z-index: 1000;
+
+// Lists
+$list-item-padding: 1rem;
