--- a/app/assets/stylesheets/_app_bar.scss
+++ b/app/assets/stylesheets/_app_bar.scss
@@ -46,16 +46,9 @@
     margin: 0 0.5em;
     outline: none;
 
-    &:first-child { margin-left: 0; }
+    &:first-child { margin-left: 0rem; }
     &:last-child { margin-right: 0; }
 
-    &::before {
-      content: "";
-      @include position(absolute, 50% 0rem 0rem 50%);
-      margin: -1.5rem;
-      width: 3rem;
-      height: 3rem;
-      border-radius: 50%;
-    }
+    @include tappable-region;
   }
 }
