--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -4,12 +4,15 @@
 @import "neat";
 @import "icons/material-design-iconic-font";
 
+@import "mixins/scrims";
 @import "mixins/touch";
 
 @import "layout";
 @import "app_bar";
 @import "navigation";
 @import "lists";
+@import "dialogs";
+@import "forms";
 
 @import "groups";
 
