--- a/app/assets/stylesheets/_navigation.scss
+++ b/app/assets/stylesheets/_navigation.scss
@@ -13,11 +13,7 @@ nav.main-navigation {
   @include transition(all $animation-duration $animation-timing-function);
 
   + .scrim {
-    @include position(fixed, 0rem 0rem 0rem 0rem);
-    margin: 0rem;
-    background-color: rgba(dark-scrim-color(), 0);
-    pointer-events: none;
-    @include transition(background-color $animation-duration $reverse-animation-timing-function);
+    @include scrim-inactive;
   }
 
   #show-navigation:checked ~ & {
@@ -26,9 +22,7 @@ nav.main-navigation {
     @include transition(all $animation-duration $animation-timing-function);
 
     + .scrim {
-      background: dark-scrim-color();
-      pointer-events: auto;
-      @include transition(background-color $animation-duration $animation-timing-function);
+      @include scrim-active;
     }
   }
 
