--- a/app/assets/stylesheets/base/extends/_button.scss
+++ b/app/assets/stylesheets/base/extends/_button.scss
@@ -1,22 +1,26 @@
 %button {
   -webkit-font-smoothing: antialiased;
-  background-color: $base-button-color;
-  border-radius: $base-border-radius;
-  color: white;
-  display: inline-block;
-  font-size: $base-font-size;
-  font-weight: bold;
-  line-height: 1;
-  padding: 0.75em 1em;
+  outline: none;
+  padding: 0 0.5rem;
+  line-height: 2.25rem;
+  height: 2.25rem;
+  vertical-align: middle;
+  margin: 0 0.5rem;
+  background-color: $base-button-background;
   text-decoration: none;
+  border-radius: $base-border-radius;
+  min-width: 5.5rem;
+  text-align: center;
 
-  &:hover {
-    background-color: $hover-button-color;
-    color: white;
-  }
+  &:first-child, & + %button { margin-left: 0; }
 
-  &:disabled {
-    cursor: not-allowed;
-    opacity: 0.5;
-  }
+  &:last-child { margin-right: 0; }
+
+  &:hover { background-color: $hover-button-background; }
+
+  &:focus { background-color: $focus-button-background; }
+
+  &:active { background-color: $active-button-background; }
+
+  &:disabled { color: disabled-color(); }
 }
