--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,7 +14,9 @@
 @import "dialogs";
 @import "forms";
 
+@import "dashboards";
 @import "groups";
+@import "calendar";
 
 html, body {
   margin: 0;
