--- a/app/assets/stylesheets/base/_variables.scss
+++ b/app/assets/stylesheets/base/_variables.scss
@@ -94,3 +94,6 @@ $dialog-margin: 2.5rem;
 $dialog-z-index: 200;
 $dialog-border-radius: 0.125rem;
 $dialog-shadow: 0px 1rem 0.75rem 0px rgba(0, 0, 0, 0.22), 0px 1.25rem 2.5rem 0px rgba(0, 0, 0, 0.30);
+
+// Calendar
+$calendar-border-color: #E1E1E1;
