make login look bearable (still plenty to do)

--- a/app/assets/stylesheets/_forms.scss
+++ b/app/assets/stylesheets/_forms.scss
@@ -1,3 +1,10 @@
 %button {
   @include type-button($base-accent-color);
 }
+
+input, textarea {
+  @include placeholder {
+    color: secondary-color();
+    font-weight: $base-font-weight;
+  }
+}
