--- a/app/views/layouts/devise.html.haml
+++ b/app/views/layouts/devise.html.haml
@@ -1,10 +1,10 @@
 !!!
 %html
   %head
-    %title availaBE
+    %title availa.be
     = stylesheet_link_tag "http://fonts.googleapis.com/css?family=Roboto+Slab|Roboto:500,300,300italic,200"
-    = stylesheet_link_tag "application", media: "all"
-    = javascript_include_tag "application"
+    = stylesheet_link_tag "login", media: "all"
+    = javascript_include_tag "login"
     = csrf_meta_tags
   %body
     = yield
