--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -30,6 +30,17 @@
 
     %label.scrim{for: "show-navigation"}
 
+    %footer
+      .alerts
+        - flash.each do |name, msg|
+          - if msg.is_a?(String)
+            .alert
+              .text= msg
+              %button.clear= icon :clear
+      .floating
+        %button.floating-action-button
+          = icon "add"
+
     :coffee
       moment.tz.setDefault "#{Time.zone.tzinfo.name}"
       moment.defaultFormat = "YYYY-MM-DD"
