--- a/app/assets/stylesheets/base/_variables.scss
+++ b/app/assets/stylesheets/base/_variables.scss
@@ -91,9 +91,15 @@ $list-item-padding: 1rem;
 // Dialogs
 $dialog-footer-height: 3rem;
 $dialog-margin: 2.5rem;
-$dialog-z-index: 200;
+$dialog-z-index: 300;
 $dialog-border-radius: 0.125rem;
 $dialog-shadow: 0px 1rem 0.75rem 0px rgba(0, 0, 0, 0.22), 0px 1.25rem 2.5rem 0px rgba(0, 0, 0, 0.30);
 
 // Calendar
 $calendar-border-color: #E1E1E1;
+
+// Alerts
+$alert-z-index: 200;
+$alert-color: white;
+$alert-background-color: #323232;
+$alert-height: 3rem;
