move floating buttons into controllers

--- a/app/assets/stylesheets/_forms.scss
+++ b/app/assets/stylesheets/_forms.scss
@@ -1,5 +1,10 @@
 %button {
   @include type-button($base-accent-color);
+
+  i:first-child:last-child {
+    display: block;
+    height: 1em;
+  }
 }
 
 input, textarea {
