--- a/app/assets/stylesheets/_alerts.scss
+++ b/app/assets/stylesheets/_alerts.scss
@@ -1,111 +1,71 @@
-body>footer {
+footer.alerts {
   @include position(absolute, null 0rem 0rem 0rem);
   z-index: $alert-z-index;
 
-  .alerts {
-    position: relative;
+  .alert {
+    @include type-body-1($alert-color);
+    background: $alert-background-color;
+    width: 100%;
+    padding: 0.875rem 1.5rem;
+    border-top: 1px solid transparent;
+    @include transition(opacity 0.5s ease);
 
-    .alert {
-      @include type-body-1($alert-color);
-      background: $alert-background-color;
-      width: 100%;
-      padding: 0.875rem 1.5rem;
-      margin-top: 1px;
+    @include align-items(stretch);
+    @include display(flex);
+    @include flex-direction(row);
+    @include justify-content(flex-start);
 
-      @include align-items(stretch);
-      @include display(flex);
-      @include flex-direction(row);
-      @include justify-content(flex-start);
+    + .alert {
+      border-top-color: black;
+    }
 
-      &:first-child {
-        margin-top: 0;
-      }
+    .text {
+      @include flex(1);
+    }
 
-      .text {
-        @include flex(1);
-      }
+    button,
+    .button {
+      margin-top: -0.5rem;
+      margin-bottom: -0.5rem;
 
-      button,
-      .button {
-        margin-top: -0.5rem;
-        margin-bottom: -0.5rem;
-
-        &:last-child {
-          margin-right: -0.5rem;
-        }
-      }
-
-      button.clear {
-        color: secondary-color(white);
-        min-width: 0;
-        background: none;
-        font-size: 1.5rem;
-
-        .icon-clear {
-          height: 1.5rem;
-          display: block;
-        }
-      }
-
-      .text + button,
-      .text + .button {
-        margin-left: 1rem;
+      &:last-child {
+        margin-right: -0.5rem;
       }
     }
 
-  }
-
-  .floating {
-    @include position(absolute, null 2.75rem 100% null);
-    margin-bottom: 2.75rem;
-
-    .floating-action-button {
-      position: absolute;
-      left: 0;
-      top: 0;
-      background: $base-secondary-color;
-      color: white;
-      width: 3.5rem;
-      height: 3.5rem;
-      padding: 1rem;
-      margin: -1.75rem;
+    button.clear {
+      color: secondary-color(white);
       min-width: 0;
-      border-radius: 50%;
+      background: none;
       font-size: 1.5rem;
 
-      @include shadow(1);
-      @include transition(box-shadow $animation-duration $animation-timing-function);
-
-      i {
-        display: block;
+      .icon-clear {
         height: 1.5rem;
+        display: block;
       }
 
-      &:hover {
-        @include shadow(2);
-      }
+      @include tappable-region;
+    }
+
+    .text + button,
+    .text + .button {
+      margin-left: 1rem;
     }
   }
 
+
   @include media($medium-screen) {
-    bottom: 1rem;
+    @include position(absolute, null 4.5rem 1rem 0rem);
+    max-width: 37.5rem;
 
-    .alerts {
-      @include position(absolute, null 4.5rem 0rem 0rem);
-
-      .alert {
-        width: auto;
-        min-width: 18rem;
-        max-width: 35.5rem;
-        float: left;
-        clear: left;
-        margin: 1rem 1rem 0;
-        border-radius: $base-border-radius;
-      }
-    }
-
-    .floating {
-      margin-bottom: 1.75rem;
+    .alert {
+      width: auto;
+      min-width: 18rem;
+      max-width: 35.5rem;
+      float: left;
+      clear: left;
+      margin: 1rem 1rem 0;
+      border-radius: $base-border-radius;
     }
   }
 }
