--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -3,6 +3,8 @@
 @import "base/base";
 @import "neat";
 
+@import "functions/math";
+
 @import "mixins/scrims";
 @import "mixins/touch";
 @import "mixins/shadows";
@@ -13,11 +15,13 @@
 @import "navigation";
 @import "lists";
 @import "dialogs";
+@import "dropdowns";
 @import "forms";
 @import "alerts";
 
 @import "dashboards";
 @import "groups";
+@import "events";
 @import "calendar";
 
 html, body {
