--- a/app/assets/stylesheets/_layout.scss
+++ b/app/assets/stylesheets/_layout.scss
@@ -1,3 +1,9 @@
+.page {
+  background: $base-background-color;
+  overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
+}
+
 .sections > section {
   @include position(absolute, 0rem 0rem 0rem 0rem);
   overflow: hidden;
@@ -9,10 +15,7 @@
 
     > section {
       @include position(absolute, 0rem null 0rem 0rem);
-      background: $base-background-color;
       width: 100%;
-      overflow-y: auto;
-      -webkit-overflow-scrolling: touch;
 
       &:first-child .top-left-button [rel="back"],
       &:not(:first-child) .top-left-button [rel="menu"] {
