tweaks for mobile

--- a/app/assets/stylesheets/_layout.scss
+++ b/app/assets/stylesheets/_layout.scss
@@ -42,6 +42,12 @@
           @include shadow(1);
           @include transition(box-shadow $animation-duration $animation-timing-function);
 
+          i {
+            display: block;
+            height: 1em;
+            line-height: 1em;
+          }
+
           &:hover {
             @include shadow(2);
           }
