--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,10 +2,11 @@
 %html
   %head
     %title availa.be
-    = stylesheet_link_tag "http://fonts.googleapis.com/css?family=Roboto+Slab|Roboto:500,300,300italic,200"
+    = stylesheet_link_tag "http://fonts.googleapis.com/css?family=Roboto+Slab|Roboto:600,400,400italic,200"
     = stylesheet_link_tag "application", media: "all"
     = javascript_include_tag "application"
     = csrf_meta_tags
+    %meta{name: "viewport", content: "width=device-width, initial-scale=1, user-scalable=no"}
   %body
     %section.main
     %input#show-navigation{type: :checkbox, autocomplete: :off}
