--- a/app/views/layouts/devise.html.haml
+++ b/app/views/layouts/devise.html.haml
@@ -6,5 +6,6 @@
     = stylesheet_link_tag "login", media: "all"
     = javascript_include_tag "login"
     = csrf_meta_tags
+    %meta{name: "viewport", content: "width=device-width, initial-scale=1, user-scalable=no"}
   %body
     = yield
