--- a/app/assets/stylesheets/base/_variables.scss
+++ b/app/assets/stylesheets/base/_variables.scss
@@ -50,10 +50,10 @@ $focus-button-background: $hover-button-background;
 $active-button-background: rgba(#999, 0.4);
 
 // Flash Colors
-$alert-color: $yellow-100;
-$error-color: $red-100;
-$notice-color: $light-blue-100;
-$success-color: $light-green-100;
+$alert-color: $yellow;
+$error-color: $red;
+$notice-color: $light-blue;
+$success-color: $light-green;
 
 // Border color
 $base-border-color: divider-color();
