--- a/app/assets/stylesheets/_lists.scss
+++ b/app/assets/stylesheets/_lists.scss
@@ -103,3 +103,16 @@
     }
   }
 }
+
+.sortable-list {
+  .sorting {
+    position: relative;
+    z-index: 1;
+    opacity: 0.85;
+    @include shadow(2);
+  }
+
+  .sortable:not(.sorting) {
+    @include transition(transform $animation-duration $animation-timing-function);
+  }
+}
