--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,6 +10,7 @@
 @import "mixins/scrims";
 @import "mixins/touch";
 @import "mixins/shadows";
+@import "mixins/loading";
 
 @import "icon_font";
 @import "layout";
