--- a/app/assets/stylesheets/base/_variables.scss
+++ b/app/assets/stylesheets/base/_variables.scss
@@ -103,3 +103,9 @@ $alert-z-index: 200;
 $alert-color: white;
 $alert-background-color: #323232;
 $alert-height: 3rem;
+
+// Loading spinners
+$spinner-color: rgba(0, 0, 0, 0.26);
+$spinner-background-color: white;
+$spinner-size: 1em;
+$spinner-thickness: 0.1em;
