--- a/app/assets/stylesheets/_layout.scss
+++ b/app/assets/stylesheets/_layout.scss
@@ -22,8 +22,26 @@
         display: none;
       }
 
+      > .content {
+        position: relative;
+        z-index: 1;
+      }
+
+      > .loading-spinner {
+        @include position(absolute, 50% null null 50%);
+        margin: -0.5em;
+        font-size: 4em;
+        opacity: 0;
+        @include transition(opacity 0.5s ease);
+      }
+
+      &.loading > .loading-spinner {
+        opacity: 1;
+      }
+
       > footer {
         @include position(absolute, null 0rem 0rem 0rem);
+        z-index: 10;
 
         .floating-action-button {
           position: absolute;
