--- a/app/assets/stylesheets/base/_typography.scss
+++ b/app/assets/stylesheets/base/_typography.scss
@@ -85,7 +85,7 @@ html, body, input, textarea, select, button {
 
 @mixin type-tab($color: $base-font-color) {
   font-size: 0.875rem; // 14px
-  line-height: 1.5rem; // 24px
+  line-height: 1rem; // 16px
   font-weight: $bold-font-weight;
   text-transform: uppercase;
   color: text-color($color);
@@ -188,4 +188,9 @@ cite {
   &:before {
     content: "\2014 \00A0";
   }
+}
+
+i[class^="icon-"] {
+  display: inline-block;
+  height: 1em;
 }
